--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picify Gallery</title>
+    <title>Fuumi's GFX Gallery</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       :root {
@@ -15,7 +15,7 @@
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <aside class="w-64 bg-[var(--primary)] text-white p-6">
-        <h1 class="text-2xl font-bold mb-8">📷 Picify</h1>
+        <h1 class="text-2xl font-bold mb-8">📷 Fuumi</h1>
         <ul class="space-y-4">
           <li><a href="#wallpapers" class="hover:underline">Wallpapers</a></li>
           <li><a href="#nature" class="hover:underline">Nature</a></li>
