--- a/images/index.html
+++ b/images/index.html
@@ -1,1 +1,3 @@
 
+<img src="images/photo_2025-02-22_11-27-23 (2)jpg" class="rounded shadow" />
+<img src="images/photo_2025-02-22_11-27-23 (2)jpg" class="rounded shadow" />
