--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
       <aside class="w-64 bg-[var(--primary)] text-white p-6">
         <h1 class="text-2xl font-bold mb-8">📷 Fuumi</h1>
         <ul class="space-y-4">
-          <li><a href="#wallpapers" class="hover:underline">Wallpapers</a></li>
-          <li><a href="#nature" class="hover:underline">Nature</a></li>
-          <li><a href="#urban" class="hover:underline">Urban</a></li>
+          <li><a href="#wallpapers" class="hover:underline">Heads</a></li>
+          <li><a href="#nature" class="hover:underline">Bodies</a></li>    
+          <li><a href="#urban" class="hover:underline">Previewer</a></li>
+          <li><a href="#urban" class="hover:underline">Looting Guide</a></li>
+          <li><a href="#urban" class="hover:underline">Socials</a></li>
         </ul>
       </aside>
 
       <!-- Main Content -->
       <main class="flex-1 p-8 overflow-auto">
-        <section id="wallpapers" class="mb-12">
-          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Wallpapers</h2>
+        <section id="Heads" class="mb-12">
+          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Heads</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <img src="https://source.unsplash.com/400x300/?wallpaper" class="rounded shadow" />
             <img src="https://source.unsplash.com/400x300/?background" class="rounded shadow" />
@@ -34,8 +36,8 @@
           </div>
         </section>
 
-        <section id="nature" class="mb-12">
-          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Nature</h2>
+        <section id="Bodies" class="mb-12">
+          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Bodies</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <img src="https://source.unsplash.com/400x300/?nature" class="rounded shadow" />
             <img src="https://source.unsplash.com/400x300/?forest" class="rounded shadow" />
@@ -43,14 +45,32 @@
           </div>
         </section>
 
-        <section id="urban" class="mb-12">
-          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Urban</h2>
+        <section id="Previewer" class="mb-12">
+          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Previewer</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
             <img src="https://source.unsplash.com/400x300/?city" class="rounded shadow" />
             <img src="https://source.unsplash.com/400x300/?street" class="rounded shadow" />
             <img src="https://source.unsplash.com/400x300/?buildings" class="rounded shadow" />
           </div>
         </section>
+                <section id="Looting Guide" class="mb-12">
+          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Looting Guide</h2>
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+            <img src="https://source.unsplash.com/400x300/?city" class="rounded shadow" />
+            <img src="https://source.unsplash.com/400x300/?street" class="rounded shadow" />
+            <img src="https://source.unsplash.com/400x300/?buildings" class="rounded shadow" />
+          </div>
+        </section>
+        
+                <section id="Socials" class="mb-12">
+          <h2 class="text-2xl font-semibold text-[var(--primary)] mb-4">Socials</h2>
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+            <img src="https://source.unsplash.com/400x300/?city" class="rounded shadow" />
+            <img src="https://source.unsplash.com/400x300/?street" class="rounded shadow" />
+            <img src="https://source.unsplash.com/400x300/?buildings" class="rounded shadow" />
+          </div>
+        </section>
+        
       </main>
     </div>
   </body>
