--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <aside class="w-64 bg-[var(--primary)] text-white p-6">
         <h1 class="text-2xl font-bold mb-8">📷 Fuumi</h1>
         <ul class="space-y-4">
-          <li><a href="#nature" class="hover:underline">Heads</a></li>
-          <li><a href="#urban" class="hover:underline">Bodies</a></li>    
+          <li><a href="#heads" class="hover:underline">Heads</a></li>
+          <li><a href="#boies" class="hover:underline">Bodies</a></li>    
           <li><a href="#previewer" class="hover:underline">Previewer</a></li>
           <li><a href="#looting-guide" class="hover:underline">Looting Guide</a></li>
           <li><a href="#socials" class="hover:underline">Socials</a></li>
