--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="bg-[#0d001c] text-white font-sans">
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
-    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-72 h-auto" />
+    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <!-- Button -->
-    <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
+    <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-lilac-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
   VISIT SOCIALS
     </a>
   </div>
