--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Custom Gallery</title>
+  <title>Fuumi Galleria</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white font-sans">
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
-    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
+    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
     <!-- Button -->
-    <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-lilac-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
+    <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
   VISIT SOCIALS
     </a>
   </div>
