--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+,<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -27,7 +27,7 @@
     <!-- CHARACTER CARD TEMPLATE -->
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="leopold.png" alt="Leopold" class="w-full h-40 object-cover mb-4" />
-      <h2 class="font-bold text-lg">LEOPOLD THE OLD</h2>
+      <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
       <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
@@ -36,7 +36,7 @@
   </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
-    © Your Website Name
+    © Fuumi Galleria
   </footer>
 </body>
 </html>
