--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
   <div id="collection" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6 max-w-6xl mx-auto">
     <!-- CHARACTER CARD TEMPLATE -->
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/Webhead.png" alt="Leopold" class="w-full h-40 object-cover mb-4" />
+      <img src="images/Webhead.png" alt="Head" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
       <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/Webbody.png" alt="Leopold" class="w-full h-40 object-cover mb-4" />
+      <img src="images/Webbody.png" alt="Body" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">BODY COLLECTIONS</h2>
       <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/diveloot_goggles.png" alt="Leopold" class="w-full h-40 object-cover mb-4" />
+      <img src="images/Loot.png" alt="Loot" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">LOOTING GUIDE</h2>
       <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/dc_loadedcoin_tails.png" alt="Leopold" class="w-full h-40 object-cover mb-4" />
-      <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
+      <img src="images/Coin.png" alt="Preview" class="w-25 h-25 object-cover mb-4" />
+      <h2 class="font-bold text-lg">UPLOADS PREVIEWER</h2>
       <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
