--- a/src/heads.html
+++ b/src/heads.html
@@ -18,8 +18,8 @@
 
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
-    <p class="uppercase font-bold">A castle full of magic, adventures, witches and wizards.</p>
-    <p>An evil wizard is attacking everyone! Someone needs to be a hero — but who?</p>
+    <p class="uppercase font-bold">✨ Here's a collection of heads that you might like ✨</p>
+    <p>I do not own this heads. Credits to their rightful owners.</p>
   </div>
 
   <!-- Characters -->
