--- a/src/heads.html
+++ b/src/heads.html
@@ -9,7 +9,7 @@
 <body class="bg-[#0d001c] text-white font-sans">
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
-    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
+    <img src="images/Coin.png" alt="Fuumi's Galleria" class="mx-auto w-120 h-auto" />
     <!-- Button -->
     <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
   VISIT SOCIALS
