--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Webhead.png" alt="Head" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
-      <a href="src/heads.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
+      <a href="src/head.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
