--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Webbody.png" alt="Body" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">BODY COLLECTIONS</h2>
-      <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
+      <a href="hooks/secondpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Loot.png" alt="Loot" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">LOOTING GUIDE</h2>
-      <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
+      <a href="hooks/thirdpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Coin.png" alt="Preview" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">UPLOADS PREVIEWER</h2>
-      <a href="#" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
+      <a href="hooks/fourthpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
     </div>
 
