--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Character Pages</title>
+  <title>Character Slot Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white font-sans">
@@ -22,48 +22,48 @@
     <p>An evil wizard is attacking everyone! Someone needs to be a hero — but who?</p>
   </div>
 
-  <!-- Image Templates -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6 max-w-6xl mx-auto">
+  <!-- Thin Vertical Slots (32x560) -->
+  <div class="flex flex-wrap justify-center gap-6 p-6 max-w-6xl mx-auto">
     
-    <!-- Template Slot (repeat 10x) -->
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot1.png" alt="Slot 1" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <!-- SLOT TEMPLATE (repeat 10x) -->
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot1.png" alt="Slot 1" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot2.png" alt="Slot 2" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot2.png" alt="Slot 2" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot3.png" alt="Slot 3" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot3.png" alt="Slot 3" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot4.png" alt="Slot 4" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot4.png" alt="Slot 4" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot5.png" alt="Slot 5" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot5.png" alt="Slot 5" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot6.png" alt="Slot 6" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot6.png" alt="Slot 6" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot7.png" alt="Slot 7" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot7.png" alt="Slot 7" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot8.png" alt="Slot 8" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot8.png" alt="Slot 8" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot9.png" alt="Slot 9" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot9.png" alt="Slot 9" class="w-[32px] h-[560px] object-cover" />
     </div>
 
-    <div class="bg-[#1e002e] p-4 rounded-lg text-center">
-      <img src="images/slot10.png" alt="Slot 10" class="w-[32px] h-[560px] object-cover mx-auto" />
+    <div class="bg-[#1e002e] p-4 rounded-lg">
+      <img src="images/slot10.png" alt="Slot 10" class="w-[32px] h-[560px] object-cover" />
     </div>
 
   </div>
