--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -11,7 +11,7 @@
   <!-- Header Section -->
   <div class="text-center py-8 bg-[#1a0033]">
     <img src="your-logo.png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
-    <a href="index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
+    <a href="../index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
       ← BACK TO HOME
     </a>
   </div>
