--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Character Slot Page</title>
+  <title>Bodies Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white font-sans">
 
   <!-- Header Section -->
   <div class="text-center py-8 bg-[#1a0033]">
-    <img src="your-logo.png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
+    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <a href="index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
       ← BACK TO HOME
     </a>
@@ -18,8 +18,8 @@
 
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
-    <p class="uppercase font-bold">A castle full of magic, adventures, witches and wizards.</p>
-    <p>An evil wizard is attacking everyone! Someone needs to be a hero — but who?</p>
+    <p class="uppercase font-bold">✨ Here's a list of bodies that you might like ✨</p>
+    <p>PS. I do not own this heads and credits belongs to their rightful owners.</p>
   </div>
 
   <!-- Image Slot Grid -->
