--- a/hooks/fourthpage.html
+++ b/hooks/fourthpage.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <div class="text-center py-6 bg-[#1a0033]">
-    <img src="../images/your-logo.png" class="mx-auto w-40" />
+    <img src="../images/Galleria. png" class="mx-auto w-40" />
     <a href="../index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded hover:bg-yellow-300">
       ← BACK TO HOME
     </a>
