--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -45,10 +45,12 @@
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Ashen Wolf</h3>
+          <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
         </div>
         <p class="text-xs text-gray-300">
-          A loyal beast guardian of Elarin who speaks in riddles and hunts only at dusk.
+          Elster's Cave is just to the left of Sardon's Tower. Elster is a hoarder, so his cave is a mess. If you talk to him, Elster will give you a lump sum of gralats for all your loot items. Or if you don't want to give him everything, you can hold up items one at a time in front of him. He will buy any item from you. However, remember, you won't get as many gralats than selling to the other NPCs.
+
+Below is a list of items that you have to sell to Elster, because no other NPCs buys them.
         </p>
       </div>
 
@@ -72,10 +74,10 @@
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Ashen Wolf</h3>
+          <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
         </div>
         <p class="text-xs text-gray-300">
-          A loyal beast guardian of Elarin who speaks in riddles and hunts only at dusk.
+          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
         </p>
       </div>
 
