--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -27,49 +27,49 @@
     
     <!-- SLOT TEMPLATE (repeat 10x) -->
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot1.png" alt="Slot 1" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h1.png" alt="Slot 1" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot2.png" alt="Slot 2" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h2.png" alt="Slot 2" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot3.png" alt="Slot 3" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h3.png" alt="Slot 3" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot4.png" alt="Slot 4" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h4.png" alt="Slot 4" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot5.png" alt="Slot 5" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h5.png" alt="Slot 5" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot6.png" alt="Slot 6" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h6.png" alt="Slot 6" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot7.png" alt="Slot 7" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h7.png" alt="Slot 7" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot8.png" alt="Slot 8" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h8.png" alt="Slot 8" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot9.png" alt="Slot 9" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h9.png" alt="Slot 9" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot10.png" alt="Slot 10" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h0.png" alt="Slot 10" class="w-[32px] h-[560px] object-cover" />
     </div>
 
   </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
-    © Your Website Name
+    © Fuumi Galleria
   </footer>
 
 </body>
