--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -19,7 +19,7 @@
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
     <p class="uppercase font-bold">✨ Here's a list of bodies that you might like ✨</p>
-    <p>PS. I do not own this heads and credits belongs to their rightful owners.</p>
+    <p>PS. I do not own this bodies and credits belongs to their rightful owners.</p>
   </div>
 
   <!-- Image Slot Grid -->
@@ -27,49 +27,49 @@
     
     <!-- SLOT TEMPLATE (repeat 10x) -->
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot1.png" alt="Slot 1" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b1.png" alt="Slot 1" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot2.png" alt="Slot 2" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b2.png" alt="Slot 2" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot3.png" alt="Slot 3" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b3.png" alt="Slot 3" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot4.png" alt="Slot 4" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b4.png" alt="Slot 4" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot5.png" alt="Slot 5" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b5.png" alt="Slot 5" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot6.png" alt="Slot 6" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b6.png" alt="Slot 6" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot7.png" alt="Slot 7" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b7.png" alt="Slot 7" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot8.png" alt="Slot 8" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b8.png" alt="Slot 8" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot9.png" alt="Slot 9" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b9.png" alt="Slot 9" class="w-[128px] h-[720px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="images/slot10.png" alt="Slot 10" class="w-[128px] h-[720px] object-cover" />
+      <img src="../images/b0.png" alt="Slot 10" class="w-[128px] h-[720px] object-cover" />
     </div>
 
   </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
-    © Your Website Name
+    © Fuumi Galleria
   </footer>
 
 </body>
