--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -31,15 +31,15 @@
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h2.png" alt="Slot 2" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h2.gif" alt="Slot 2" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h3.png" alt="Slot 3" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h3.gif" alt="Slot 3" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h4.png" alt="Slot 4" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h4.gif" alt="Slot 4" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
@@ -47,15 +47,15 @@
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h6.png" alt="Slot 6" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h6.gif" alt="Slot 6" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h7.png" alt="Slot 7" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h7.gif" alt="Slot 7" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h8.png" alt="Slot 8" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h8.gif" alt="Slot 8" class="w-[32px] h-[560px] object-cover" />
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="bg-[#1e002e] p-4 rounded-lg">
-      <img src="../images/h0.png" alt="Slot 10" class="w-[32px] h-[560px] object-cover" />
+      <img src="../images/h0.gif" alt="Slot 10" class="w-[32px] h-[560px] object-cover" />
     </div>
 
   </div>
